--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button id="changeMessage">Change Message</button>
     </div> -->
     <script src="d3.v7.min.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script src="map.js"></script>
   </body>
 </html>
