visualize the map and add hovering and click effect

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </nav>
     <svg class="map" width="900" height="900"></svg>
     <svg class="bar-chart"></svg>
+    <div id="barChartContainer"></div>
     <!-- 
     <div class="container">
       <button id="changeMessage">Change Message</button>
