styling the heatmap

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
       <a href="#services" class="nav-link">Services</a>
       <a href="#contact" class="nav-link">Contact</a>
     </nav>
-    <svg class="map" width="900" height="900"></svg>
+    <svg class="map" width="1000" height="1000"></svg>
     <div id="tooltip"></div>
-
     <svg class="bar-chart"></svg>
     <div id="barChartContainer"></div>
-    <section class="input-form">
+    <!-- <section class="input-form">
       <form id="cfuForm">
         <label for="colonies">Count of Colonies:</label>
         <input type="number" id="colonies" name="colonies" required />
@@ -37,11 +36,9 @@
 
         <label for="location">Location:</label>
         <input type="text" id="location" name="location" />
-        <!-- use a select here-->
-
         <button type="submit">Calculate CFU</button>
       </form>
-    </section>
+    </section> -->
     <div id="result"></div>
     <!-- 
     <div class="container">
