--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     </nav>
     <svg class="map" width="1000" height="1000"></svg>
     <div id="tooltip"></div>
-    <svg class="bar-chart"></svg>
-    <div id="barChartContainer"></div>
+    <div id="densityPlot"></div>
+    <!-- Placeholder for the density plot -->
+    <input type="range" id="mySlider" min="1" max="100" value="40" />
+    <!-- Optional: Slider for adjusting density plot -->
     <!-- <section class="input-form">
       <form id="cfuForm">
         <label for="colonies">Count of Colonies:</label>
