--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <svg class="map" width="1000" height="1000"></svg>
     <div id="tooltip"></div>
-    <div id="densityPlot"></div>
+    <div id="lineChart"></div>
     <!-- Placeholder for the density plot -->
     <input type="range" id="mySlider" min="1" max="100" value="40" />
     <!-- Optional: Slider for adjusting density plot -->
@@ -49,6 +49,7 @@
     <script src="d3.v7.min.js"></script>
     <!-- <script src="script.js"></script> -->
     <script src="map.js"></script>
-    <script src="CFUcalculator.js"></script>
+    <script src="area-plot.js"></script>
+    <!-- <script src="CFUcalculator.js"></script> -->
   </body>
 </html>
