fix minor bugs and change nav bar

--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
   <body>
     <nav class="navbar">
       <a href="#home" class="nav-link">Home</a>
-      <a href="#about" class="nav-link">CFUCalculor</a>
-      <a href="#services" class="nav-link">Services</a>
-      <a href="#contact" class="nav-link">Contact</a>
+      <a href="#about" class="nav-link">About</a>
+      <a href="./CFUcalculator/calculator.html" class="nav-link">CFUCalculor</a>
+      <a href="#contact" class="nav-link">Meet Our Team</a>
     </nav>
     <svg class="map" width="1000" height="1000"></svg>
     <div id="tooltip"></div>
-    <div id="lineChart"></div>
-    <!-- Placeholder for the density plot -->
-    <input type="range" id="mySlider" min="1" max="100" value="40" />
-    <!-- Optional: Slider for adjusting density plot -->
+    <div class="areaChart"></div>
     <!-- <section class="input-form">
       <form id="cfuForm">
         <label for="colonies">Count of Colonies:</label>
@@ -41,14 +38,14 @@
         <button type="submit">Calculate CFU</button>
       </form>
     </section> -->
-    <div id="result"></div>
+    <!-- <div id="result"></div> -->
     <!-- 
     <div class="container">
       <button id="changeMessage">Change Message</button>
     </div> -->
     <script src="d3.v7.min.js"></script>
     <!-- <script src="script.js"></script> -->
-    <script src="area-plot.js"></script>
+    <!-- <script src="area-plot.js"></script> -->
     <script src="map.js"></script>
 
     <!-- <script src="CFUcalculator.js"></script> -->
