mapping the heatmap with the floor plan; change tooltip showing only CFU

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <a href="./CFUcalculator/calculator.html" class="nav-link">CFUCalculor</a>
       <a href="#contact" class="nav-link">Meet Our Team</a>
     </nav>
-    <svg class="map" width="1000" height="1000"></svg>
+    <div class="map-container">
+      <img src="floor-plan.PNG" width="350" height="350" />
+      <svg class="map" width="1000" height="1000"></svg>
+    </div>
     <div id="tooltip"></div>
     <div class="areaChart"></div>
     <!-- <section class="input-form">
