--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cool Website</title>
+    <!-- <link rel="icon" href="./About/hmss.webp" /> -->
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +16,7 @@
   <body>
     <nav class="navbar">
       <a href="#home" class="nav-link">Home</a>
-      <a href="#about" class="nav-link">About</a>
+      <a href="https://hmss.framer.website/" class="nav-link">About</a>
       <a href="./CFUcalculator/calculator.html" class="nav-link">CFUCalculor</a>
       <a href="#contact" class="nav-link">Meet Our Team</a>
     </nav>
