--- a/home/index.html
+++ b/home/index.html
@@ -15,9 +15,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="#home" class="nav-link">Home</a>
-      <a href="https://hmss.framer.website/" class="nav-link">About</a>
-      <a href="./CFUcalculator/calculator.html" class="nav-link">CFUCalculor</a>
+      <a href="./home/index.html" class="nav-link">Home</a>
+      <a href="../about/about.html" class="nav-link">About</a>
+      <a href="https://hmss.framer.website/CFU-Calculator" class="nav-link"
+        >CFUCalculor</a
+      >
       <a href="#contact" class="nav-link">Meet Our Team</a>
     </nav>
     <div class="map-container">
