--- a/CFUcalculator/calculator.html
+++ b/CFUcalculator/calculator.html
@@ -31,6 +31,23 @@
           <p class="result">RESULT: <span>41847.82609</span></p>
           <p>LOCATION: <span>ICU 005</span></p>
           <p>TEMPERATURE: <span>25°C/77°F</span></p>
+          <!-- <section class="input-form">
+      <form id="cfuForm">
+        <label for="colonies">Count of Colonies:</label>
+        <input type="number" id="colonies" name="colonies" required />
+
+        <label for="size">Area of plate (cm2):</label>
+        <input type="number" id="size" name="size" required />
+
+        <label for="exposureTime">Exposure Time (min):</label>
+        <input type="number" id="exposureTime" name="exposureTime" required />
+
+        <label for="location">Location:</label>
+        <input type="text" id="location" name="location" />
+        <button type="submit">Calculate CFU</button>
+      </form>
+    </section> -->
+          <!-- <div id="result"></div> -->
         </div>
       </div>
       <div class="actions-container">
