--- a/home/index.html
+++ b/home/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <nav class="navbar">
-      <a href="./home/index.html" class="nav-link">Home</a>
+      <a href="./index.html" class="nav-link">Home</a>
       <a href="../about/about.html" class="nav-link">About</a>
       <a href="https://hmss.framer.website/CFU-Calculator" class="nav-link"
         >CFUCalculor</a
