add presentation slides and adjust data

--- a/About/about.html
+++ b/About/about.html
@@ -52,5 +52,13 @@
         conducive to health.
       </p>
     </section>
+    <section class="paragraph">
+      <a
+        id="presentation-link"
+        href="https://docs.google.com/presentation/d/19e0Jy_cAYQjSHDl5GIn5C_dbxq7fVcP8bqF4V0jFteU/edit?usp=sharing"
+        target="_blank"
+        >See our presentation!</a
+      >
+    </section>
   </body>
 </html>
