add alert style

--- a/home/index.html
+++ b/home/index.html
@@ -28,6 +28,7 @@
     </div>
     <div id="tooltip"></div>
     <div class="areaChart"></div>
+    <div id="alertContainer"></div>
     <script src="d3.v7.min.js"></script>
     <script src="map.js"></script>
   </body>
