--- a/CFUcalculator/calculator.html
+++ b/CFUcalculator/calculator.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <a href="../home/index.html" class="nav-link">Home</a>
+      <a href="../index.html" class="nav-link">Home</a>
       <a href="./about.html" class="nav-link">About</a>
       <a href="../CFUcalculator/calculator.html" class="nav-link"
         >CFUCalculor</a
