--- a/About/about.html
+++ b/About/about.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="../home/index.html" class="nav-link">Home</a>
+      <a href="../index.html" class="nav-link">Home</a>
       <a href="./about.html" class="nav-link">About</a>
       <a href="https://hmss.framer.website/CFU-Calculator" class="nav-link"
         >CFUCalculor</a
