--- a/CFUcalculator/calculator.html
+++ b/CFUcalculator/calculator.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="calculator.css" />
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <a href="../index.html" class="nav-link">Home</a>
       <a href="./about.html" class="nav-link">About</a>
       <a href="../CFUcalculator/calculator.html" class="nav-link"
@@ -17,43 +17,31 @@
       <a href="#contact" class="nav-link">Meet Our Team</a>
     </nav>
 
-    <main>
-      <h1>CFU IMAGE CALCULATOR</h1>
-      <div class="calculator-container">
-        <div class="image-container">
-          <!-- Placeholder for the image -->
-          <div class="cfu-image-placeholder"></div>
-        </div>
-        <div class="results-container">
-          <p>COLONIES COUNT: <span>77</span></p>
-          <p>DISK SIZE: <span>9.2</span></p>
-          <p>EXPOSURE TIME: <span>10</span></p>
-          <p class="result">RESULT: <span>41847.82609</span></p>
-          <p>LOCATION: <span>ICU 005</span></p>
-          <p>TEMPERATURE: <span>25°C/77°F</span></p>
-          <!-- <section class="input-form">
-      <form id="cfuForm">
-        <label for="colonies">Count of Colonies:</label>
-        <input type="number" id="colonies" name="colonies" required />
+    <h1>CFU Image Calculator</h1>
+    <div class="body" id="left"></div>
+    <div class="body" id="right">
+      <section class="input-form">
+        <form id="cfuForm">
+          <label for="colonies">Count of Colonies:</label>
+          <input type="number" id="colonies" name="colonies" required />
 
-        <label for="size">Area of plate (cm2):</label>
-        <input type="number" id="size" name="size" required />
+          <label for="size">Area of plate (cm2):</label>
+          <input type="number" id="size" name="size" required />
 
-        <label for="exposureTime">Exposure Time (min):</label>
-        <input type="number" id="exposureTime" name="exposureTime" required />
+          <label for="exposureTime">Exposure Time (min):</label>
+          <input type="number" id="exposureTime" name="exposureTime" required />
 
-        <label for="location">Location:</label>
-        <input type="text" id="location" name="location" />
-        <button type="submit">Calculate CFU</button>
-      </form>
-    </section> -->
-          <!-- <div id="result"></div> -->
-        </div>
-      </div>
-      <div class="actions-container">
-        <button>IMAGE UPLOAD</button>
-        <button>CALCULATE</button>
-      </div>
-    </main>
+          <label for="location">Location:</label>
+          <input type="text" id="location" name="location" />
+          <button type="submit">Calculate CFU</button>
+        </form>
+      </section>
+      <div id="result"></div>
+    </div>
+
+    <div class="actions-container">
+      <button>IMAGE UPLOAD</button>
+      <button>CALCULATE</button>
+    </div>
   </body>
 </html>
