about page styling

--- a/About/about.html
+++ b/About/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -27,29 +27,35 @@
         <img src="hmss.jpg" width="150" height="180" />
         <div class="heading">
           <h1>Welcome To HMSS</h1>
-          <h2>HVAC Monitoring & Surveillance System</h2>
+          <h3>HVAC Monitoring & Surveillance System</h3>
         </div>
       </div>
     </section>
     <section class="paragraph" id="part1">
       <h2>What is HMSS?</h2>
-      <p>
-        The onset of infection often leads to complex and incurable health
-        issues or complications. Our purpose and objective is to take on this
-        task, laying down a future where patients experience an improved, more
-        secure environment within a hospital facility.
-      </p>
+      <div class="paragraph1">
+        <p>
+          The future lies in our HVAC Monitoring & Surveillance System (HMSS).
+          It's the answer to the pressing needs of healthcare facilities. It
+          tackles challenges such as infection risks, inadequate basic care, and
+          scarcity of intuitive, and efficient products. Through this system, we
+          approach the problem at its source, aiming to create hospital
+          environments that are more sanitary and conducive to health.
+        </p>
+
+        <img src="prototype.png" width="310" height="160" />
+      </div>
     </section>
     <section class="paragraph" id="part2">
       <h2>What kind of tech-enabled solution can combat infection?</h2>
       <p>
-        The future lies in our HVAC Monitoring & Surveillance System (HMSS).
-        It's the answer to the pressing needs of healthcare facilities. It
-        tackles challenges such as infection risks, inadequate basic care, and
-        scarcity of intuitive, efficient products and educative materials.
-        Through this system, we approach the problem at its source, aiming to
-        create hospital environments that are quicker, more sanitary, and
-        conducive to health.
+        The onset of infection often leads to complex and incurable health
+        issues or complications.
+      </p>
+      <p>
+        Our purpose and objective is to take on this task, laying down a future
+        where patients experience an improved, more secure environment within a
+        hospital facility.
       </p>
     </section>
     <section class="paragraph">
