--- a/CFUcalculator/calculator.html
+++ b/CFUcalculator/calculator.html
@@ -6,11 +6,17 @@
     <title>CFU Image Calculator</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="calculator.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar">
       <a href="../index.html" class="nav-link">Home</a>
-      <a href="./about.html" class="nav-link">About</a>
+      <a href="../about/about.html" class="nav-link">About</a>
       <a href="../CFUcalculator/calculator.html" class="nav-link"
         >CFUCalculor</a
       >
