--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="https://hmss.framer.website/CFU-Calculator" class="nav-link"
         >CFUCalculor</a
       >
-      <a href="#contact" class="nav-link">Meet Our Team</a>
+      <a href="../team/team.html" class="nav-link">Meet Our Team</a>
     </nav>
     <div class="map-container">
       <img src="floor-plan.PNG" width="350" height="350" />
