--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar">
       <a href="./index.html" class="nav-link">Home</a>
-      <a href="../about/about.html" class="nav-link">About</a>
+      <a href="./about/about.html" class="nav-link">About</a>
       <a href="https://hmss.framer.website/CFU-Calculator" class="nav-link"
         >CFUCalculor</a
       >
