add technical diagram to about

--- a/About/about.html
+++ b/About/about.html
@@ -59,6 +59,7 @@
       </p>
     </section>
     <section class="paragraph">
+      <img src="techical-diagram.png" width="800" height="400" />
       <a
         id="presentation-link"
         href="https://docs.google.com/presentation/d/19e0Jy_cAYQjSHDl5GIn5C_dbxq7fVcP8bqF4V0jFteU/edit?usp=sharing"
